fix: improve alignment

--- a/src/components/eln/Eln.module.css
+++ b/src/components/eln/Eln.module.css
@@ -35,6 +35,7 @@
 
 .elnSearchfilterSearch > span {
   text-align: center;
+  display: flex;
 }
 
 .elnSearchfilterSearch > em {
@@ -43,10 +44,9 @@
 }
 
 .elnSearchfilterSearchButton {
-  position: absolute;
+  position: relative;
   right: 1.5rem;
-  top: 50%;
-  transform: translate(0, -50%);
+  align-self: center;
   padding: 0;
   background: none;
   border: none;
